@@ -28,4 +28,4 @@ requires:
   Tk::Pod: 0
   Tk::Tree: 0
   Try::Tiny: 0
-version: 1.332
+version: 1.333
